add more files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+# generated file
 ar-lib
 compile
+libtool
+Makefile
+config.log
+config.status
+config.h
+stamp-h1
+
+*/.deps/
+*/.dirstamp
+
+# compiled binary
+libekho.a
+ekho
+test_ekho
+
