--- a/config.h.in
+++ b/config.h.in
@@ -22,6 +22,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the `espeak' library (-lespeak). */
+#undef HAVE_LIBESPEAK
+
 /* Define to 1 if you have the `estools' library (-lestools). */
 #undef HAVE_LIBESTOOLS
 
